# websocket

./: .gitignore  README.md
client/: chat_client.html
client/chat-multi/: chat_client.html
server/chat/: README.md
server/chat-multi/: Makefile  README.md
server/chat-multi/includes/: beast.hpp  http_session.hpp  listener.hpp  net.hpp  shared_state.hpp  websocket_session.hpp
server/chat-multi/src/: CMakeLists.txt  http_session.cpp  listener.cpp  main.cpp  shared_state.cpp  websocket_session.cpp
server/chat/includes/: chat_message.hpp
server/chat/src/: CMakeLists.txt  chat_client.cpp  chat_server.cpp
